# micropython

./: .gitmodules
extmod/: modbluetooth.c  modbluetooth.h  moductypes.c
extmod/crypto-algorithms/: sha256.c  sha256.h
lib/littlefs/: lfs1_util.c
mpy-cross/: CMakeLists.txt  main.c
ports/esp32/: CMakeLists.txt  machine_pin.c  main.c  modesp.c  modnetwork.c  mpconfigport.h  partitions.csv
ports/esp32/boards/: manifest.py  sdkconfig.base  sdkconfig.m5stackfire  sdkconfig.m5stackfire_debug  sdkconfig.m5stackfire_wifi_debug
ports/esp32/main/: CMakeLists.txt
ports/unix/: CMakeLists.txt  modtime.c  mpconfigport.h  mpthreadport.c
ports/unix/variants/dev/: manifest.py
ports/windows/: CMakeLists.txt  mpconfigport.h  windows_mphal.c
ports/windows/msvc/: pthread.c  pthread.h
py/: builtinimport.c  makecopyifdifferent.py  makemoduledefs_cmake.py  makeqstrdefs.py  mkrules.cmake  modmicropython.c  mpstate.h  objdeque.c  parse.c  persistentcode.c  reader.c  scheduler.c  stream.c
